Xbim.Geometry.Engine.Native/include/xbim_geometry_api.h

typedef struct XbimContext_*        XbimContextHandle;
typedef struct XbimShape_*          XbimShapeHandle;
typedef struct XbimCurve_*          XbimCurveHandle;
typedef struct XbimSurface_*        XbimSurfaceHandle;
typedef int XbimResult;
typedef enum XbimShapeType
{
    XBIM_SHAPE_VERTEX   = 0,
    XBIM_SHAPE_EDGE     = 1,
    XBIM_SHAPE_WIRE     = 2,
    XBIM_SHAPE_FACE     = 3,
    XBIM_SHAPE_SHELL    = 4,
    XBIM_SHAPE_SOLID    = 5,
    XBIM_SHAPE_COMPOUND = 6
} XbimShapeType;
XBIM_EXPORT XbimResult XBIM_CALL xbim_face_build_advanced(
    XbimContextHandle        ctx,
    int                      surfaceType,
    double originX, double originY, double originZ,
    double zDirX,   double zDirY,   double zDirZ,
    double xDirX,   double xDirY,   double xDirZ,
    double radius,
    XbimShapeHandle          outerWireHandle,
    const XbimShapeHandle*   innerWireHandles,
    int                      numInnerWires,
    double                   tolerance,
    int                      sameSense,
    XbimShapeHandle*         outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_face_build_advanced_with_surface(
    XbimContextHandle        ctx,
    XbimSurfaceHandle        surfaceHandle,
    XbimShapeHandle          outerWireHandle,
    const XbimShapeHandle*   innerWireHandles,
    int                      numInnerWires,
    double                   tolerance,
    int                      sameSense,
    XbimShapeHandle*         outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_face_area(
    XbimShapeHandle faceHandle,
    double*         outArea);
XBIM_EXPORT XbimResult XBIM_CALL xbim_face_perimeter(
    XbimShapeHandle faceHandle,
    double*         outPerimeter);
XBIM_EXPORT XbimResult XBIM_CALL xbim_face_normal(
    XbimShapeHandle faceHandle,
    double          u,
    double          v,
    double*         outNormalX,
    double*         outNormalY,
    double*         outNormalZ);
XBIM_EXPORT XbimResult XBIM_CALL xbim_face_normal_at_point(
    XbimShapeHandle faceHandle,
    double          pointX,
    double          pointY,
    double          pointZ,
    double          precision,
    double          tolerance,
    double*         outNormalX,
    double*         outNormalY,
    double*         outNormalZ);
XBIM_EXPORT int XBIM_CALL xbim_face_is_facing_away(
    XbimShapeHandle faceHandle,
    double          dirX,
    double          dirY,
    double          dirZ);
XBIM_EXPORT XbimResult XBIM_CALL xbim_face_tolerance(
    XbimShapeHandle faceHandle,
    double*         outTolerance);
XBIM_EXPORT XbimResult XBIM_CALL xbim_face_get_surface(
    XbimShapeHandle    faceHandle,
    XbimSurfaceHandle* outSurface,
    int*               outSurfaceType);
XBIM_EXPORT XbimResult XBIM_CALL xbim_shell_build_from_faces(
    XbimContextHandle        ctx,
    const XbimShapeHandle*   faceHandles,
    int                      numFaces,
    double                   tolerance,
    XbimShapeHandle*         outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_shell_sew(
    XbimContextHandle   ctx,
    XbimShapeHandle     shellHandle,
    double              tolerance,
    int*                outIsFixed,
    XbimShapeHandle*    outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_shell_make_solid(
    XbimContextHandle   ctx,
    XbimShapeHandle     shellHandle,
    XbimShapeHandle*    outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_shell_build_closed_shell(
    XbimContextHandle        ctx,
    const XbimShapeHandle*   faceHandles,
    int                      numFaces,
    double                   tolerance,
    XbimShapeHandle*         outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve_build_line_3d(
    XbimContextHandle ctx,
    double originX, double originY, double originZ,
    double dirX,    double dirY,    double dirZ,
    XbimCurveHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve_build_circle_3d(
    XbimContextHandle ctx,
    double centerX, double centerY, double centerZ,
    double normalX, double normalY, double normalZ,
    double xDirX,   double xDirY,   double xDirZ,
    double radius,
    XbimCurveHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve_build_ellipse_3d(
    XbimContextHandle ctx,
    double centerX,  double centerY,  double centerZ,
    double normalX,  double normalY,  double normalZ,
    double xDirX,    double xDirY,    double xDirZ,
    double semiAxis1, double semiAxis2,
    int* outRotated,
    XbimCurveHandle* outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve_build_bspline(
    XbimContextHandle ctx,
    const double*     polesXYZ,
    int               numPoles,
    const double*     knots,
    int               numKnots,
    const int*        multiplicities,
    int               degree,
    const double*     weights,
    XbimCurveHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve_build_trimmed_3d(
    XbimContextHandle   ctx,
    XbimCurveHandle     basisHandle,
    double u1, double u2,
    int sense,
    XbimCurveHandle*    outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve_build_trimmed_line_3d(
    XbimContextHandle   ctx,
    double x1, double y1, double z1,
    double x2, double y2, double z2,
    XbimCurveHandle*    outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve_build_circle_3pt_3d(
    XbimContextHandle   ctx,
    double x1, double y1, double z1,
    double x2, double y2, double z2,
    double x3, double y3, double z3,
    XbimCurveHandle*    outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve_build_arc_of_circle_3d(
    XbimContextHandle   ctx,
    XbimCurveHandle     circleHandle,
    double u1, double u2,
    int sense,
    XbimCurveHandle*    outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve_parameters(
    XbimCurveHandle handle,
    double*         outFirst,
    double*         outLast);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve_length(
    XbimCurveHandle handle,
    double*         outLength);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve_parameter_at_length(
    XbimCurveHandle handle,
    double          arcLength,
    double          tolerance,
    double*         outParameter);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve_value(
    XbimCurveHandle handle,
    double          u,
    double*         outX, double* outY, double* outZ);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve_d1(
    XbimCurveHandle handle,
    double          u,
    double*         outPx, double* outPy, double* outPz,
    double*         outDx, double* outDy, double* outDz);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve_d2(
    XbimCurveHandle handle,
    double          u,
    double*         outPx,  double* outPy,  double* outPz,
    double*         outD1x, double* outD1y, double* outD1z,
    double*         outD2x, double* outD2y, double* outD2z);
XBIM_EXPORT int XBIM_CALL xbim_curve_is_closed(
    XbimCurveHandle handle,
    double          tolerance);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve_project_point_3d(
    XbimContextHandle   ctx,
    XbimCurveHandle     curveHandle,
    double px, double py, double pz,
    double tolerance,
    double* outParam);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve_reverse(XbimCurveHandle handle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve_build_composite_bspline(
    XbimContextHandle   ctx,
    XbimCurveHandle*    curves,
    int                 numCurves,
    double              tolerance,
    XbimCurveHandle*    outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve_build_offset_3d(
    XbimContextHandle ctx,
    XbimCurveHandle   basisHandle,
    double            offset,
    double            refDirX, double refDirY, double refDirZ,
    XbimCurveHandle*  outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_shape_count_subshapes(
    XbimShapeHandle handle,
    XbimShapeType   subType,
    int*            outCount);
XBIM_EXPORT XbimResult XBIM_CALL xbim_shape_get_subshapes(
    XbimShapeHandle     handle,
    XbimShapeType       subType,
    XbimShapeHandle*    outHandles,
    int*                count);
XBIM_EXPORT XbimResult XBIM_CALL xbim_face_outer_wire(
    XbimShapeHandle     faceHandle,
    XbimShapeHandle*    outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_face_inner_wires(
    XbimShapeHandle     faceHandle,
    XbimShapeHandle*    outHandles,
    int*                count);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve_build_clothoid(
    XbimContextHandle   ctx,
    double              clothoidConstant,
    double              startParam,
    double              endParam,
    double              placementX,
    double              placementY,
    double              dirX,
    double              dirY,
    XbimCurveHandle*    outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve_build_sine_spiral(
    XbimContextHandle   ctx,
    double              sineTerm,
    double              linearTerm,
    double              constantTerm,
    double              startParam,
    double              endParam,
    double              placementX,
    double              placementY,
    double              dirX,
    double              dirY,
    XbimCurveHandle*    outHandle);
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve_build_cosine_spiral(
    XbimContextHandle   ctx,
    double              cosineTerm,
    double              constantTerm,
    double              startParam,
    double              endParam,
    double              placementX,
    double              placementY,
    double              dirX,
    double              dirY,
    XbimCurveHandle*    outHandle);