Xbim.Geometry.Engine.Interop/Internal/XbimGeometryNativeApi.cs


        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_face_build_advanced(
            NativeContextHandle ctx,
            int surfaceType,
            double originX, double originY, double originZ,
            double zDirX, double zDirY, double zDirZ,
            double xDirX, double xDirY, double xDirZ,
            double radius,
            NativeShapeHandle outerWireHandle,
            [MarshalAs(UnmanagedType.LPArray)] IntPtr[] innerWireHandles,
            int numInnerWires,
            double tolerance,
            int sameSense,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_face_build_advanced_with_surface(
            NativeContextHandle ctx,
            NativeSurfaceHandle surfaceHandle,
            NativeShapeHandle outerWireHandle,
            [MarshalAs(UnmanagedType.LPArray)] IntPtr[] innerWireHandles,
            int numInnerWires,
            double tolerance,
            int sameSense,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_face_area(
            NativeShapeHandle faceHandle,
            out double outArea);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_face_perimeter(
            NativeShapeHandle faceHandle,
            out double outPerimeter);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_face_normal(
            NativeShapeHandle faceHandle,
            double u,
            double v,
            out double outNormalX,
            out double outNormalY,
            out double outNormalZ);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_face_normal_at_point(
            NativeShapeHandle faceHandle,
            double pointX,
            double pointY,
            double pointZ,
            double precision,
            double tolerance,
            out double outNormalX,
            out double outNormalY,
            out double outNormalZ);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_face_is_facing_away(
            NativeShapeHandle faceHandle,
            double dirX,
            double dirY,
            double dirZ);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_face_tolerance(
            NativeShapeHandle faceHandle,
            out double outTolerance);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_face_get_surface(
            NativeShapeHandle faceHandle,
            out NativeSurfaceHandle outSurface,
            out int outSurfaceType);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_face_outer_wire(
            NativeShapeHandle faceHandle,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_face_inner_wires(
            NativeShapeHandle faceHandle,
            [MarshalAs(UnmanagedType.LPArray)] IntPtr[] outHandles,
            ref int count);

        #endregion

        #region Shell

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_shell_build_from_faces(
            NativeContextHandle ctx,
            [MarshalAs(UnmanagedType.LPArray)] IntPtr[] faceHandles,
            int numFaces,
            double tolerance,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_shell_sew(
            NativeContextHandle ctx,
            NativeShapeHandle shellHandle,
            double tolerance,
            out int outIsFixed,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_shell_make_solid(
            NativeContextHandle ctx,
            NativeShapeHandle shellHandle,
            out NativeShapeHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_shell_build_closed_shell(
            NativeContextHandle ctx,
            [MarshalAs(UnmanagedType.LPArray)] IntPtr[] faceHandles,
            int numFaces,
            double tolerance,
            out NativeShapeHandle outHandle);

        #endregion

        #region Shape Traversal

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_shape_count_subshapes(
            NativeShapeHandle handle,
            int subType,
            out int outCount);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_shape_get_subshapes(
            NativeShapeHandle handle,
            int subType,
            [MarshalAs(UnmanagedType.LPArray)] IntPtr[] outHandles,
            ref int count);

        #endregion

        #region Curve Construction

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve_build_line_3d(
            NativeContextHandle ctx,
            double originX, double originY, double originZ,
            double dirX, double dirY, double dirZ,
            out NativeCurveHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve_build_circle_3d(
            NativeContextHandle ctx,
            double centerX, double centerY, double centerZ,
            double normalX, double normalY, double normalZ,
            double xDirX, double xDirY, double xDirZ,
            double radius,
            out NativeCurveHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve_build_ellipse_3d(
            NativeContextHandle ctx,
            double centerX, double centerY, double centerZ,
            double normalX, double normalY, double normalZ,
            double xDirX, double xDirY, double xDirZ,
            double semiAxis1, double semiAxis2,
            out int outRotated,
            out NativeCurveHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve_build_bspline(
            NativeContextHandle ctx,
            [MarshalAs(UnmanagedType.LPArray)] double[] polesXYZ,
            int numPoles,
            [MarshalAs(UnmanagedType.LPArray)] double[] knots,
            int numKnots,
            [MarshalAs(UnmanagedType.LPArray)] int[] multiplicities,
            int degree,
            [MarshalAs(UnmanagedType.LPArray)] double[]? weights,
            out NativeCurveHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve_build_trimmed_3d(
            NativeContextHandle ctx,
            NativeCurveHandle basisHandle,
            double u1, double u2,
            int sense,
            out NativeCurveHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve_build_trimmed_line_3d(
            NativeContextHandle ctx,
            double x1, double y1, double z1,
            double x2, double y2, double z2,
            out NativeCurveHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve_build_circle_3pt_3d(
            NativeContextHandle ctx,
            double x1, double y1, double z1,
            double x2, double y2, double z2,
            double x3, double y3, double z3,
            out NativeCurveHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve_build_arc_of_circle_3d(
            NativeContextHandle ctx,
            NativeCurveHandle circleHandle,
            double u1, double u2,
            int sense,
            out NativeCurveHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve_parameters(
            NativeCurveHandle handle,
            out double outFirst,
            out double outLast);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve_length(
            NativeCurveHandle handle,
            out double outLength);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve_parameter_at_length(
            NativeCurveHandle handle,
            double arcLength,
            double tolerance,
            out double outParameter);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve_value(
            NativeCurveHandle handle,
            double u,
            out double outX, out double outY, out double outZ);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve_d1(
            NativeCurveHandle handle,
            double u,
            out double outPx, out double outPy, out double outPz,
            out double outDx, out double outDy, out double outDz);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve_d2(
            NativeCurveHandle handle,
            double u,
            out double outPx, out double outPy, out double outPz,
            out double outD1x, out double outD1y, out double outD1z,
            out double outD2x, out double outD2y, out double outD2z);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve_is_closed(
            NativeCurveHandle handle,
            double tolerance);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve_project_point_3d(
            NativeContextHandle ctx,
            NativeCurveHandle curveHandle,
            double px, double py, double pz,
            double tolerance,
            out double outParam);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve_reverse(NativeCurveHandle handle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve_build_composite_bspline(
            NativeContextHandle ctx,
            [In] IntPtr[] curves,
            int numCurves,
            double tolerance,
            out NativeCurveHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve_build_offset_3d(
            NativeContextHandle ctx,
            NativeCurveHandle basisHandle,
            double offset,
            double refDirX, double refDirY, double refDirZ,
            out NativeCurveHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve_build_clothoid(
            NativeContextHandle ctx,
            double clothoidConstant,
            double startParam, double endParam,
            double placementX, double placementY,
            double dirX, double dirY,
            out NativeCurveHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve_build_sine_spiral(
            NativeContextHandle ctx,
            double sineTerm, double linearTerm, double constantTerm,
            double startParam, double endParam,
            double placementX, double placementY,
            double dirX, double dirY,
            out NativeCurveHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve_build_cosine_spiral(
            NativeContextHandle ctx,
            double cosineTerm, double constantTerm,
            double startParam, double endParam,
            double placementX, double placementY,
            double dirX, double dirY,
            out NativeCurveHandle outHandle);
